footer are designed and fully tested and also responsive

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "husky": "^7.0.0"
   },
   "dependencies": {
-    "concurrently": "^6.4.0"
+    "concurrently": "^6.4.0",
+    "react-icons": "^4.4.0"
   }
 }
