--- a/server/package.json
+++ b/server/package.json
@@ -42,6 +42,7 @@
     "express": "^4.17.1",
     "joi": "^17.6.0",
     "joi-password-complexity": "^5.1.0",
+    "joi-phone-number": "^5.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb-memory-server": "^8.0.3",
     "mongoose": "^6.0.13"
