--- a/client/package.json
+++ b/client/package.json
@@ -52,9 +52,11 @@
     "webpack-dev-server": "^4.5.0"
   },
   "dependencies": {
+    "@ant-design/plots": "^1.2.1",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "antd": "^4.22.7",
     "framer-motion": "^6.4.3",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
